--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,3 @@
-//react-scripts test overwrites the tsconfig setting for "noEmit": false to true,
-//creating a workaround to use this config file for typescript types
 {
   "compilerOptions": {
     "target": "es5",
@@ -19,6 +17,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react",
     "outDir": "lib",
     "declaration": true
@@ -27,4 +26,3 @@
     "src"
   ]
 }
-
