--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/gtag.js": "0.0.3",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^12.19.1",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/gtag.js": "0.0.3",
-    "@types/lodash": "^4.14.165",
     "@types/react-google-recaptcha": "^2.1.0",
     "babel-loader": "^8.1.0",
     "react": "^17.0.1",
@@ -78,18 +78,11 @@
     "react-is": "^17.0.1",
     "react-scripts": "4.0.0",
     "react-test-renderer": "^17.0.1",
-    "rimraf": "^3.0.2",
-    "@types/draft-js": "^0.10.44",
-    "@types/js-beautify": "^1.11.0"
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "@contentmunch/muncher-ui": "^0.7.20",
     "axios": "^0.20.0",
-    "draft-convert": "^2.1.10",
-    "draft-js": "^0.11.7",
-    "immutable": "^4.0.0-rc.12",
-    "js-beautify": "^1.13.0",
-    "qrcode": "^1.4.4",
     "react-google-recaptcha": "^2.1.0",
     "react-loading-skeleton": "^2.1.1",
     "typescript": "^4.0.3"
